@@ -11,6 +11,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Add some text on payment page if registration is set to expire after a delay
 - New paid column to registrations export
 
+### Changed
+- payment method and texts for Monthey
+
 ### Fixed
 - Ensure we send confirmation after the payment is done, not when payment page is displayed
 
